Bug 670087 - AccessibleObjectFromPoint returns incorrect accessible for popup menus, r=tbsaunde, sr=roc